# design-of-multimedia-applications

./: .gitignore  README.md
Assignment 1/: DMA_1_1.sh  DMA_1_2.sh  DMA_1_3.sh  DMA_1_4.sh
Assignment 2/: DMA_2_1.sh  DMA_2_2.py  DMA_2_3.py
Assignment 3/: CMakeLists.txt
Assignment 3/data/flower_50/: vectors.csv
Assignment 3/data/football_50/: vectors.csv
Assignment 3/data/foreman_50/: vectors.csv
Assignment 3/data/results/: Cost.xlsx  Size.xlsx
Assignment 3/include/: Config.h  DCTTransform.h  Encoder.h  EntropyCoder.h  IntraPredictor.h  Macroblock.h  MotionCompensator.h  Quantiser.h  _MotionCompensator.h
Assignment 3/lib/: LibraryWINDeb.lib  LibraryWINRel.lib
Assignment 3/src/: DCTTransform.cpp  Encoder.cpp  EntropyCoder.cpp  IntraPredictor.cpp  MotionCompensator.cpp  Quantiser.cpp
Assignment 3/tools/: MVVisualiser.py
